--- a/legal/fr/cgv.html
+++ b/legal/fr/cgv.html
@@ -6,33 +6,39 @@
     <title>CGV - Caresse</title>
     <style>
         body { font-family: -apple-system, sans-serif; line-height: 1.6; color: #333; padding: 20px; max-width: 800px; margin: auto; }
+        header { text-align: center; margin-bottom: 30px; border-bottom: 1px solid #eee; padding-bottom: 20px; }
+        .logo { height: 80px; width: auto; }
         h1 { color: #E91E63; border-bottom: 2px solid #EEE; padding-bottom: 10px; }
         h2 { color: #C2185B; margin-top: 30px; }
         .box { border: 1px solid #FFC107; background: #FFFDE7; padding: 15px; border-radius: 8px; margin: 20px 0; }
     </style>
 </head>
 <body>
-    <h1>Conditions Générales de Vente</h1>
+    <header>
+        <img src="https://raw.githubusercontent.com/odinnou/assets/main/caresse-logo.svg" alt="Logo Caresse" class="logo">
+    </header>
+
+    <h1>💳 Conditions Générales de Vente</h1>
     <p><strong>Dernière mise à jour :</strong> 02 Février 2026</p>
 
-    <h2>1. Objet</h2>
+    <h2>🎯 1. Objet</h2>
     <p>Les présentes CGV régissent la vente de crédits au sein de l'application Caresse pour l'accès aux services de génération de scénarios.</p>
 
-    <h2>2. Crédits et Garantie technique</h2>
+    <h2>💎 2. Crédits et Garantie technique</h2>
     <p>Les crédits sont consommés lors de la validation de la génération. <strong>En cas d'échec technique prouvé du système</strong> (erreur serveur), les crédits sont automatiquement recrédités sur le compte de l'utilisateur.</p>
 
-    <h2>3. Renonciation au droit de rétractation</h2>
+    <h2>⚖️ 3. Renonciation au droit de rétractation</h2>
     <div class="box">
         <strong>Important :</strong> Conformément à l’article L221-28 13° du Code de la consommation, le droit de rétractation ne s’applique pas aux contenus numériques fournis immédiatement. En lançant une génération, l’utilisateur renonce expressément à son droit de rétractation.
     </div>
 
-    <h2>4. Prix et Paiement</h2>
+    <h2>💰 4. Prix et Paiement</h2>
     <p>Les paiements sont traités exclusivement par les plateformes App Store (Apple) et Google Play Store. Les prix sont indiqués toutes taxes comprises (TTC).</p>
 
-    <h2>5. Absence de remboursement</h2>
+    <h2>🚫 5. Absence de remboursement</h2>
     <p>Aucun remboursement ne sera effectué pour des motifs subjectifs (déception vis-à-vis du scénario, style de l'IA, etc.), le service consistant en la mise à disposition de la technologie de génération.</p>
 
-    <h2>6. Suppression de compte</h2>
+    <h2>🗑️ 6. Suppression de compte</h2>
     <p>La suppression d'un scénario ou d'un compte par l'utilisateur entraîne la perte des contenus associés sans possibilité de remboursement.</p>
 </body>
 </html>
