--- a/legal/fr/privacy.html
+++ b/legal/fr/privacy.html
@@ -6,34 +6,39 @@
     <title>Confidentialité - Caresse</title>
     <style>
         body { font-family: -apple-system, sans-serif; line-height: 1.6; color: #2C3E50; padding: 20px; max-width: 800px; margin: auto; }
+        header { text-align: center; margin-bottom: 30px; border-bottom: 1px solid #eee; padding-bottom: 20px; }
+        .logo { height: 80px; width: auto; }
         h1 { color: #16A085; border-bottom: 2px solid #EEE; padding-bottom: 10px; }
         h2 { color: #1ABC9C; margin-top: 30px; }
-        .privacy-icon { font-size: 2em; float: left; margin-right: 15px; }
     </style>
 </head>
 <body>
-    <h1>Politique de Confidentialité</h1>
+    <header>
+        <img src="https://raw.githubusercontent.com/odinnou/assets/main/caresse-logo.svg" alt="Logo Caresse" class="logo">
+    </header>
+
+    <h1>🔒 Politique de Confidentialité</h1>
     <p><strong>Dernière mise à jour :</strong> 02 Février 2026</p>
 
     <p>Chez Caresse, votre intimité est notre priorité absolue. Nous appliquons des principes de sécurité rigoureux pour protéger vos données.</p>
 
-    <h2>1. Données collectées</h2>
+    <h2>🗂️ 1. Données collectées</h2>
     <ul>
         <li><strong>Identifiant :</strong> Nous utilisons un UID anonyme via Firebase.</li>
         <li><strong>Préférences :</strong> Prénoms, genre, et choix de scénarios nécessaires à la génération IA.</li>
         <li><strong>Mode Guest :</strong> En mode invité, vos données sont liées localement à votre appareil.</li>
     </ul>
 
-    <h2>2. Utilisation de l'IA</h2>
+    <h2>🧠 2. Utilisation de l'IA</h2>
     <p>Les données de votre scénario sont transmises à l'IA de manière <strong>anonymisée</strong>. Aucune donnée permettant de vous identifier personnellement (email, nom réel) n'est transmise aux modèles de génération.</p>
 
-    <h2>3. Sécurité et Hébergement</h2>
+    <h2>☁️ 3. Sécurité et Hébergement</h2>
     <p>Vos scénarios et audios sont hébergés sur des serveurs sécurisés <strong>Microsoft Azure</strong> en Europe. Les communications sont cryptées via HTTPS (OAuth2).</p>
 
-    <h2>4. Statistiques Anonymes</h2>
+    <h2>📊 4. Statistiques Anonymes</h2>
     <p>Nous analysons les tendances d'utilisation (ex: accessoires populaires) uniquement de manière <strong>agrégée et anonyme</strong> pour améliorer l'expérience globale.</p>
 
-    <h2>5. Droit à l'oubli</h2>
+    <h2>💨 5. Droit à l'oubli</h2>
     <p>Vous pouvez supprimer vos scénarios à tout moment. Cette action efface définitivement les fichiers audio et textes de nos serveurs Azure et de notre base Supabase.</p>
 
     <p>Pour toute question : <em>[Ton Email]</em></p>
